<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEntryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hguideline_70bottom"
        android:layout_marginBottom="0dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp">

            <TextView
                android:id="@+id/text_job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto"
                android:text="@string/description_step0"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/entry_job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/default_job_title"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords"
                app:layout_constraintStart_toStartOf="@id/text_job_title"
                app:layout_constraintTop_toBottomOf="@id/text_job_title" />

            <TextView
                android:id="@+id/text_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_company"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/entry_job_title"
                app:layout_constraintTop_toBottomOf="@id/entry_job_title" />

            <EditText
                android:id="@+id/entry_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/default_company_name"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords"
                app:layout_constraintStart_toStartOf="@id/text_company_name"
                app:layout_constraintTop_toBottomOf="@id/text_company_name" />

            <TextView
                android:id="@+id/title_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_date"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/entry_company_name"
                app:layout_constraintTop_toBottomOf="@id/entry_company_name" />

            <EditText
                android:id="@+id/entry_date"
                android:focusable="false"
                android:longClickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:imeOptions="actionNext"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="@id/title_date"
                app:layout_constraintTop_toBottomOf="@id/title_date" />

            <TextView
                android:id="@+id/title_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_contact"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/entry_date"
                app:layout_constraintTop_toBottomOf="@id/entry_date" />

            <EditText
                android:id="@+id/entry_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/default_contact_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                app:layout_constraintStart_toStartOf="@id/title_contact"
                app:layout_constraintTop_toBottomOf="@id/title_contact" />

            <EditText
                android:id="@+id/entry_contact_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/default_contact_mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="@id/entry_contact_name"
                app:layout_constraintTop_toBottomOf="@id/entry_contact_name" />

            <EditText
                android:id="@+id/entry_contact_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/default_contact_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="@id/entry_contact_mail"
                app:layout_constraintTop_toBottomOf="@id/entry_contact_mail" />

            <TextView
                android:id="@+id/title_job_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_job_ref"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/entry_contact_phone"
                app:layout_constraintTop_toBottomOf="@id/entry_contact_phone" />

            <EditText
                android:id="@+id/entry_job_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/default_job_ref"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                app:layout_constraintStart_toStartOf="@id/title_job_ref"
                app:layout_constraintTop_toBottomOf="@id/title_job_ref" />

            <TextView
                android:id="@+id/title_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_notes"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/entry_job_ref"
                app:layout_constraintTop_toBottomOf="@id/entry_job_ref" />

            <EditText
                android:id="@+id/entry_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:text=""
                app:layout_constraintStart_toStartOf="@id/title_notes"
                app:layout_constraintTop_toBottomOf="@id/title_notes" />

            <!-- Empty view to avoid entry_notes to be hidden by keyboard -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintStart_toStartOf="@id/entry_notes"
                app:layout_constraintTop_toBottomOf="@id/entry_notes" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/hguideline_70bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintGuide_end="70dp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/hguideline_70bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <android.support.constraint.Guideline
            android:id="@+id/vguideline_p35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <android.support.constraint.Guideline
            android:id="@+id/vguideline_p65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/text_confirm_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vguideline_p65"
            app:layout_constraintStart_toStartOf="@id/vguideline_p65" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/text_cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vguideline_p35"
            app:layout_constraintStart_toStartOf="@id/vguideline_p35" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>